# vector-scalping

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  test_tvkit.py  vector-scalping.code-workspace
.claude/agents/: README.md  dependency-manager.md  documentation-specialist.md  python-architect.md
.github/: copilot-instructions.md
.github/instructions/: core-architectrual-principles.instructions.md  documentation-standards.instructions.md  file-organization.instructions.md  git-commit.instructions.md  python-dependency-management.instructions.md
.github/prompts/: Git-Commit-Reviewer.prompt.md  Prompt-Engineer.prompt.md  Python-Architect.prompt.md
backtest/: vector_scalping_vectorbt.py
docs/: MATHEMATICAL_FORMULA_CORRECTIONS.md  README.md  backtesting.md
docs/api/: core.md  models.md  types.md
docs/modules/: calculations.md  data_service.md  models.md  signals.md
examples/: __init__.py  strategy_demo.py
examples/backtesting/: basic_backtest.py  custom_data_backtest.py
examples/notebooks/: usage_demo.ipynb
tests/: __init__.py  test_calculations.py  test_data_service.py  test_models.py  test_signals.py
vector_scalping/: __init__.py  calculations.py  data_service.py  models.py  signals.py
