[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vector-scalping"
version = "0.1.0"
description = "Vector Scalping Trading Strategy - Advanced multi-timeframe vector-based trading system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.17.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "polars>=1.32.2",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.8",
    "tvkit>=0.1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["vector_scalping"]
